# uampio_invoke-aws-lambda-rs

./: Cargo.toml  action.yml
.github/workflows/: release.yml
src/: main.rs
