[package]
name = "invoke-aws-lambda"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "invoke-aws-lambda"
path = "src/main.rs"

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-lambda = "1"
aws-credential-types = "1"
aws-types = "1"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
base64 = "0.22"
